--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
     <h2>Research Projects</h2>
 
     <h3>Modeling Emission Lines</h3>
+
+    <figure>
+      <img src="images/BPT_current1.jpg" alt="Emission line ratios of~galaxies at $z\sim2$ (pink) and $z\sim0$ (blue). 
+        My work (triangles) reproduces observations across both epochs, with room for calibration.}</figcaption>
+    </figure>
+    
     <p>
       Currently, I am developing the emission line (EL) modeling} in <code>GALACTICUS</code>.
       Emission from young hot stars and AGN can ionize surrounding gas, creating `HII regions'
