--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <h3>Modeling Emission Lines</h3>
 
     <figure>
-      <img src="images/BPT_current1.jpg" alt="Emission line ratios of~galaxies at $z\sim2$ (pink) and $z\sim0$ (blue). 
+      <img src="images/BPT_current1.jpeg" alt="Emission line ratios of galaxies at $z\sim2$ (pink) and $z\sim0$ (blue). 
         My work (triangles) reproduces observations across both epochs, with room for calibration.}</figcaption>
     </figure>
     
