--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       of galactic structure and evolution. These streams offer valuable insights into the gravitational potential 
       and assembly history of galaxies. We explore how a population of stellar streams evolves in response to a 
       major perturbation, such as a galaxy merger. See here for more details.
-      <a href="https://dancingstreamsinmerginghalos.github.io">github.com/sachiwee</a>
+      <a href="https://dancingstreamsinmerginghalos.github.io">dancingstreamsinmerginghalos.github.io</a>
     </p>
   </section>
 
