--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
 
     <figure>
       <img src="images/BPT_current1.jpg" alt="Emission line ratios of galaxies at $z\sim2$ (pink) and $z\sim0$ (blue). 
-        My work (triangles) reproduces observations across both epochs, with room for calibration.}</figcaption>
+        My work (triangles) reproduces observations across both epochs, with room for calibration.}"class="figure" />
+    <figcaption>Emission line ratios of galaxies at $z\sim2$ (pink) and $z\sim0$ (blue). 
+        My work (triangles) reproduces observations across both epochs, with room for calibration.</figcaption>
     </figure>
     
     <p>
