--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </figure>
     
     <p>
-      Currently, I am developing the emission line (EL) modeling} in <code>GALACTICUS</code>.
+      Currently, I am developing the emission line (EL) modeling in <code>GALACTICUS</code>.
       Emission from young hot stars and AGN can ionize surrounding gas, creating `HII regions'
       and `narrow line regions'. These ELs probe the SFH, gas metallicity, gas density, and 
       AGN activity. Star-forming galaxies at high redshift occupy a locus shifted to 
