--- a/index.html
+++ b/index.html
@@ -39,31 +39,35 @@
 
     <h3>Modeling Emission Lines</h3>
 
-
+    <figure>
+      <img src="images/BPT_current1.jpg" alt="Emission line ratios of~galaxies at cosmic noon (pink) and z~0 (blue). My work (triangles) reproduces observations across both epochs, with room for calibration." class="figure" />
+      <figcaption>Emission line ratios of~galaxies at cosmic noon (pink) and z~0 (blue). My work (triangles) reproduces observations across both epochs, with room for calibration.</figcaption>
+    </figure>
     
     <p>
       Currently, I am developing the emission line (EL) modeling in <code>GALACTICUS</code>.
       Emission from young hot stars and AGN can ionize surrounding gas, creating `HII regions'
       and `narrow line regions'. These ELs probe the SFH, gas metallicity, gas density, and 
       AGN activity. Star-forming galaxies at high redshift occupy a locus shifted to 
-      higher $[\mathrm{OIII}]/\mathrm{H}\beta$ ratios than SDSS galaxies at $z\sim0$, a trend 
+      higher [\mathrm{OIII}]/Hβ ratios than SDSS galaxies at z~0, a trend 
       established across samples from hundreds (Shapley+2015,Strom+2017) to 
       thousands of systems (Kashino+2019). With current JWST surveys and upcoming missions 
       such as Roman and LSST set to deliver millions of emission-line galaxies, it is both 
       critical and timely to refine theoretical models of ELs for interpreting these datasets 
-      and testing our understanding of galaxy evolution. I have implemented an improved model 
+      and testing our understanding of galaxy evolution.<br>
+      I have implemented an improved model 
       for emission line luminosities in HII regions using <code>CLOUDY</code> (Ferland+2017)
       for star-forming galaxies. The luminosities of HII regions are characterized by parameters
       including hydrogen density, interstellar metallicity, ionizing photon rates, and elemental
       and dust abundances (Gutkin+2016). Notably, this model approximately reproduces the
-      observed $H_{\alpha},\mathrm{[NII],[OII]}$ LFs (Favole+2024), and agree with galaxy 
-      EL ratios at $z\sim2$ (Strom+2017,Raptis+2025). I have further developed a AGN EL model to
+      observed H&alpha,[NII],[OII] LFs (Favole+2024), and agree with galaxy 
+      EL ratios at cosmic noon (Strom+2017,Raptis+2025). I have further developed a AGN EL model to
       predict narrow-line region emission. What's unique about this model is the ability to connect
       emission line ratios and other properties of galaxies to better understand their behavior. 
       Our models reproduce the observed black hole (BH) accretion rates (Vazquez+2025).
       I am facilitating further comparison of models to observations of SFR distributions, 
       BH mass velocity dispersion relations (Robotham+2011,McConnel&Ma2013). My models will support
-      surveys uncovering millions of EL galaxies.
+      surveys uncovering millions of emission line galaxies.
     </p>
     
 
