--- a/index.html
+++ b/index.html
@@ -19,13 +19,16 @@
   <header>
     <h1>Sachi Weerasooriya</h1>
     <p>Postdoctoral Researcher • Galaxy Formation and Evolution</p>
-    <img src="images/portrait.jpeg" alt="Portrait of Sachi Weerasooriya" class="portrait" />
+    
   </header>
 
   <section id="about">
     <h2>About Me</h2>
     <p>
-      I am a postdoctoral researcher modeling galaxies for future surveys, such as Roman, with a 
+      <figure class="wrap-left">
+    <img src="images/portrait.jpeg" alt="Portrait of Sachi Weerasooriya" />
+  
+   </figure>I am a postdoctoral researcher modeling galaxies for future surveys, such as Roman, with a 
       focus on accurate modeling of emission lines and calibrating models using the Semi-Analytic Model Galacticus. 
       My other research interests are modeling dwarf satellites of the Milky Way and Centaurus A, and exploring the
       impact of major mergers on stellar streams and their properties.
